# Backend_BD

./: .gitignore  CMakeLists.txt  DivideJob.cpp  DivideJob.h  FPProcess.cpp  FPProcess.h  Job.cpp  Job.h  JobTypes.cpp  JobTypes.h  Polygon.cpp  Polygon.h  RestApiHandler.cpp  RestApiHandler.h  Utils.h  WebService.cpp  WebService.h  main.cpp  typedef.h
ExternalLibs/Modules/: FindTufao1.cmake
